--- a/openatlas/templates/import/import_data.html
+++ b/openatlas/templates/import/import_data.html
@@ -36,6 +36,6 @@
                 {{ _('preview')|uc_first }}
             {% endif %}
         </h2>
-        {{ table|pager|safe }}
+        {{ table.display()|safe }}
     {% endif %}
 {% endblock %}
