--- a/openatlas/templates/user/activity.html
+++ b/openatlas/templates/user/activity.html
@@ -6,5 +6,5 @@
 {% endblock %}
 {% block content %}
     {{ form|display_form|safe }}
-    {{ table|pager|safe }}
+    {{ table.display()|safe }}
 {% endblock %}
