--- a/openatlas/templates/admin/newsletter.html
+++ b/openatlas/templates/admin/newsletter.html
@@ -12,7 +12,7 @@
             {{ form.send }}
         </div>
         <div style="float:left;margin-left:1em;">
-            {{ table|pager|safe }}
+            {{ table.display()|safe }}
         </div>
     </form>
 {% endblock %}
