--- a/openatlas/templates/event/index.html
+++ b/openatlas/templates/event/index.html
@@ -11,5 +11,5 @@
             {% endfor %}
         </div>
     {% endif %}
-    {{ table|pager|safe }}
+    {{ table.display()|safe }}
 {% endblock %}
