--- a/openatlas/templates/index/index.html
+++ b/openatlas/templates/index/index.html
@@ -5,7 +5,7 @@
 {% block content %}
     {% if current_user.is_authenticated %}
         <div style="float:left;margin-right:2em;">
-            {{ tables['counts']|pager|safe }}
+            {{ tables['overview'].display('overview')|safe }}
         </div>
         <div style="float:left;">
             <p>
@@ -30,14 +30,14 @@
             </p>
         </div>
         <div style="clear:both;"></div>
-        {% if tables['latest'].data %}
+        {% if tables['latest'].rows %}
             <h1>{{ _('latest')|uc_first }}</h1>
-            {{ tables['latest']|pager|safe }}
+            {{ tables['latest'].display('latest')|safe }}
             <a href="{{ url_for('user_activity') }}">{{ _('Show all activity')|uc_first }}</a>
         {% endif %}
-        {% if tables['bookmarks'].data %}
+        {% if tables['bookmarks'].rows %}
             <h1>{{ _('bookmarks')|uc_first }}</h1>
-            {{ tables['bookmarks']|pager|safe }}
+            {{ tables['bookmarks'].display('bookmarks')|safe }}
         {% endif %}
     {% else %}
         <div>{{ intro|safe }}</div>
