--- a/openatlas/templates/types/view.html
+++ b/openatlas/templates/types/view.html
@@ -10,12 +10,12 @@
 <div id="tabs" class="tabs-container">
     <ul>
         <li><a href="#tab-info">{{ _('info')|uc_first }}</a></li>
-        {% if tables['subs'].data %}
-            <li><a href="#tab-subs">{{ _('subs')|uc_first }} ({{ tables['subs']['data']|length|format_number|format_number }})</a></li>
+        {% if tables['subs'].rows %}
+            <li><a href="#tab-subs">{{ _('subs')|uc_first }} ({{ tables['subs'].rows|length|format_number|format_number }})</a></li>
         {% endif %}
-        {% if tables['entities'].data or tables['link_entities'].data %}
+        {% if tables['entities'].rows or tables['link_entities'].rows %}
             <li>
-                <a href="#tab-entities">{{ _('entities')|uc_first }} ({{ (tables['entities']['data']|length + tables['link_entities']['data']|length)|format_number }})</a>
+                <a href="#tab-entities">{{ _('entities')|uc_first }} ({{ (tables['entities'].rows|length + tables['link_entities'].rows|length)|format_number }})</a>
             </li>
         {% endif %}
     </ul>
@@ -40,23 +40,23 @@
             {{ node|description|safe }}
         {% endif %}
     </div>
-    {% if tables['subs'].data %}
+    {% if tables['subs'].rows %}
         <div id="tab-subs">
-            {{ tables['subs']|pager|safe }}
+            {{ tables['subs'].display('subs')|safe }}
         </div>
     {% endif %}
-    {% if tables['entities'].data or tables['link_entities'].data %}
+    {% if tables['entities'].rows or tables['link_entities'].rows %}
         <div id="tab-entities">
             {% if 'editor'|is_authorized and not root.value_type %}
                 <div class="button-bar">
                     <a class="button" href="{{ url_for('node_move_entities', id_=node.id) }}">{{ _('move entities')|uc_first }}</a>
                 </div>
             {% endif %}
-            {% if tables['entities'].data %}
-                {{ tables['entities']|pager|safe }}
+            {% if tables['entities'].rows %}
+                {{ tables['entities'].display('entities')|safe }}
             {% endif %}
-            {% if tables['link_entities'].data %}
-                {{ tables['link_entities']|pager|safe }}
+            {% if tables['link_entities'].rows %}
+                {{ tables['link_entities'].display('link_entities')|safe }}
             {% endif %}
         </div>
     {% endif %}
