--- a/openatlas/templates/model/class_view.html
+++ b/openatlas/templates/model/class_view.html
@@ -11,25 +11,25 @@
         </p>
         {{ data['info']|data_table|safe }}
     </div>
-    {% if tables['super'].rows|length > 0 %}
+    {% if tables['super'].rows %}
         <div style="float:left;padding-right:2em;">
             <p><strong>{{ _('super')|uc_first }}</strong></p>
             {{ tables['super'].display('super')|safe }}
         </div>
     {% endif %}
-    {% if tables['sub'].rows|length > 0 %}
+    {% if tables['sub'].rows %}
         <div style="float:left;padding-right:2em;">
             <p><strong>{{ _('subs')|uc_first }}</strong></p>
             {{ tables['sub'].display('sub')|safe }}
         </div>
     {% endif %}
-    {% if tables['domains'].rows|length > 0 %}
+    {% if tables['domains'].rows %}
         <div style="float:left;padding-right:2em;">
             <p><strong>{{ _('domain for')|uc_first }}</strong></p>
             {{ tables['domains'].display('domains')|safe }}
         </div>
     {% endif %}
-    {% if tables['ranges'].rows|length > 0 %}
+    {% if tables['ranges'].rows %}
         <div style="float:left;padding-right:2em;">
             <p><strong>{{ _('range for')|uc_first }}</strong></p>
             {{ tables['ranges'].display('ranges')|safe }}
