--- a/openatlas/templates/model/property_view.html
+++ b/openatlas/templates/model/property_view.html
@@ -9,13 +9,13 @@
         <p><strong>{{ _('info')|uc_first }}</strong></p>
         {{ tables['info']|data_table|safe }}
     </div>
-    {% if tables['super'].rows|length > 0 %}
+    {% if tables['super'].rows %}
         <div style="float:left;padding-right:2em;">
             <p><strong>{{ _('super')|uc_first }}</strong></p>
             {{ tables['super'].display('super')|safe }}
         </div>
     {% endif %}
-    {% if tables['sub'].rows|length > 0 %}
+    {% if tables['sub'].rows %}
         <div style="float:left;padding-right:2em;">
             <p><strong>{{ _('subs')|uc_first }}</strong></p>
             {{ tables['sub'].display('sub')|safe }}
