--- a/openatlas/templates/file/view.html
+++ b/openatlas/templates/file/view.html
@@ -12,7 +12,7 @@
         <li><a href="#tab-actor">{{ _('actor')|uc_first }} ({{ tables['actor'].rows|length|format_number }})</a></li>
         <li><a href="#tab-place">{{ _('place')|uc_first }} ({{ tables['place'].rows|length|format_number }})</a></li>
         {% for table_name in ['feature', 'stratigraphic-unit', 'find'] %}
-            {% if tables[table_name].rows 0 %}
+            {% if tables[table_name].rows %}
                 <li><a href="#tab-{{ table_name }}">{{ _(table_name)|uc_first }} ({{ tables[table_name].rows|length|format_number }})</a></li>
             {% endif %}
         {% endfor %}
