--- a/openatlas/templates/admin/check_link_duplicates.html
+++ b/openatlas/templates/admin/check_link_duplicates.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block content %}
     {{ 'Data_integrity'|manual_link|safe }}
-    {% if table.rows and table['id'] == 'check_duplicates' %}
+    {% if duplicates %}
         <div class="button-bar">
             <a href="{{ url_for('admin_check_link_duplicates', delete='delete') }}">{{ _('delete link duplicates')|uc_first }}</a>
         </div>
