--- a/openatlas/static/css/images.css
+++ b/openatlas/static/css/images.css
@@ -22,6 +22,12 @@ div.preview img {
      margin-right: 1em;
 }
 
+div#credits img {
+    max-height: 40px;
+    margin-right: 1em;
+    background-color: white;
+}
+
 table.tablesorter thead tr .tablesorter-header {
     background-image: url("/static/images/icons/arrow_updown.png");
     background-position: right 0.4em top 0.4em;
