--- a/openatlas/templates/index/credits.html
+++ b/openatlas/templates/index/credits.html
@@ -4,74 +4,82 @@
     > {{ _('credits')|uc_first }}
 {% endblock %}
 {% block content %}
-    <p>Development was and is funded by several projects, grants, institutes and departments:</p>
-    <h2>Institutes</h2>
-    <a target="_blank" rel="noopener" href="https://www.oeaw.ac.at/">
-        <img src="/static/images/credits/logo_oeaw.png" alt="ÖAW" />
-    </a>
-    <a target="_blank" rel="noopener" href="https://www.oeaw.ac.at/imafo/">
-        <img src="/static/images/credits/logo_imafo.gif" alt="IMAFO" />
-    </a>
-    <a target="_blank" rel="noopener" href="https://www.oeaw.ac.at/acdh">
-        <img src="/static/images/credits/logo_acdh.png" style="height:60px;" alt="ACDH - Austrian Centre for Digital Humanities" />
-    </a>
-    <a target="_blank" rel="noopener" href="https://erc.europa.eu/">
-        <img src="/static/images/credits/logo_erc.jpg" style="height:60px;" alt=" European Research Council " />
-    </a>
-    <a target="_blank" rel="noopener" href="https://www.univie.ac.at/en/">
-        <img src="/static/images/credits/logo_university_vienna.png" alt="University of Vienna" />
-    </a>
-    <a target="_blank" rel="noopener" href="https://www.fwf.ac.at/en/">
-        <img src="/static/images/credits/logo_fwf.png" alt="FWF Austrian Science Fund" />
-    </a>
-    <h2>Projects</h2>
-    <a target="_blank" rel="noopener" href="https://oeaw.academia.edu/MappingMedievalConflict">
-        <img src="/static/images/credits/logo_medcon.png" alt="MEDCON" />
-    </a>
-    <a target="_blank" rel="noopener" href="http://dpp.oeaw.ac.at/">
-        <img src="/static/images/credits/logo_dpp.png" alt="DPP" />
-    </a>
-    <a target="_blank" rel="noopener" href="http://www.connectedclerics.com/">
-        <img src="/static/images/credits/logo_connec.png" style="height:60px;" alt="CONNEC" />
-    </a>
-    <a target="_blank" rel="noopener" href="http://www.openatlas.eu/gkn">
-        <img src="/static/images/credits/logo_frontier.png" alt="Frontier, Contact Zone or No Man's Land" />
-    </a>
-    <a target="_blank" rel="noopener" href="https://www.oeaw.ac.at/imafo/forschung/historische-identitaetsforschung/projekte/weitere-projekte/ostalpenraum-revisited/">
-        <img src="/static/images/credits/logo_oar.jpg" style="height:60px;" alt="Ostalpenraum Revisited" />
-    </a>
-    <h1>Team</h1>
-    <p>
-        <strong>Stefan Eichert</strong><br />
-        Idea and Concept, CIDOC CRM Adaptions and Mappings
-    </p>
-    <p>
-        <strong>Alexander Watzinger</strong><br />
-        Software Development, Concept
-    </p>
-    <p>
-        <strong>Jan Belik</strong><br />
-        Logo and Design Consulting
-    </p>
-    <p>
-        <strong>Daniel Kittel</strong><br />
-        Quality Assurance
-    </p>
-    <p>
-        <strong>Christoph Hoffmann</strong><br />
-        Frontend
-    </p>
-    <h2>Contributors</h2>
-    <p>
-        Asil Çetin<br />
-        Bernhard Koschicek<br />
-        Christof Rauchenberger<br />
-        Johannes Preiser-Kapeller<br />
-        Judith Pucher (Digital Laut)<br />
-        Katharina Winckler<br />
-        Mihailo Popović<br />
-        Peter Andorfer<br />
-        Petra Heinicker<br />
-        Veronika Gründhammer<br />
-    </p>
+    <div id="credits">
+        <p>Development was and is funded by several projects, grants, institutes and departments:</p>
+        <h2>Institutes</h2>
+        <a target="_blank" rel="noopener" href="https://www.oeaw.ac.at/">
+            <img src="/static/images/institutes/oeaw.png" alt="ÖAW" />
+        </a>
+        <a target="_blank" rel="noopener" href="https://www.oeaw.ac.at/imafo/">
+            <img src="/static/images/institutes/imafo.png" alt="IMAFO" />
+        </a>
+        <a target="_blank" rel="noopener" href="https://www.oeaw.ac.at/acdh">
+            <img src="/static/images/institutes/acdh.png" alt="Austrian Centre for Digital Humanities" />
+        </a>
+        <a target="_blank" rel="noopener" href="https://erc.europa.eu/">
+            <img src="/static/images/institutes/erc.png" alt="European Research Council " />
+        </a>
+        <a target="_blank" rel="noopener" href="https://www.univie.ac.at/en/">
+            <img src="/static/images/institutes/uni_vienna.jpg" alt="University of Vienna" />
+        </a>
+        <a target="_blank" rel="noopener" href="https://www.fwf.ac.at/en/">
+            <img src="/static/images/institutes/fwf.png" alt="Austrian Science Fund" />
+        </a>
+        <h2>Projects</h2>
+        <a target="_blank" rel="noopener" href="https://www.oeaw.ac.at/stipendien-foerderungen/foerderprogramme/godigital/godigital-next-generation-ausgewaehlte-projekte/">
+            <img src="/static/images/projects/thanados.png" alt="THANADOS" />
+        </a>
+        <a target="_blank" rel="noopener" href="http://www.connectedclerics.com/">
+            <img src="/static/images/projects/connec.jpg" alt="CONNEC" />
+        </a>
+        <a target="_blank" rel="noopener" href="http://dpp.oeaw.ac.at/">
+            <img src="/static/images/projects/dpp.jpg" alt="DPP" />
+        </a>
+        <a target="_blank" rel="noopener" href="https://oeaw.academia.edu/MappingMedievalConflict">
+            <img src="/static/images/projects/medcon.png" alt="MEDCON" />
+        </a>
+        <a target="_blank" rel="noopener" href="http://www.openatlas.eu/gkn">
+            <img src="/static/images/projects/frontier.png" alt="Frontier, Contact Zone or No Man's Land" />
+        </a>
+        <a target="_blank" rel="noopener" href="https://www.oeaw.ac.at/imafo/forschung/historische-identitaetsforschung/projekte/weitere-projekte/ostalpenraum-revisited/">
+            <img src="/static/images/projects/ostalpen.jpg" alt="Ostalpenraum Revisited" />
+        </a>
+        <h1>Team</h1>
+        <p>
+            <strong>Stefan Eichert</strong><br />
+            Idea, Concept and Data Modelling
+        </p>
+        <p>
+            <strong>Alexander Watzinger</strong><br />
+            Software Development and Concept
+        </p>
+        <p>
+            <strong>Jan Belik</strong><br />
+            Logo Design and Design Consulting
+        </p>
+        <p>
+            <strong>Daniel Kittel</strong><br />
+            Quality Assurance
+        </p>
+        <p>
+            <strong>Christoph Hoffmann</strong><br />
+            Frontend Development
+        </p>
+        <p>
+            <strong>Bernhard Koschicek</strong><br />
+            Software Development
+        </p>
+        <h2>Contributors</h2>
+        <p>
+            Asil Çetin<br />
+            Christof Rauchenberger<br />
+            Johannes Preiser-Kapeller<br />
+            Judith Pucher (Digital Laut)<br />
+            Katharina Winckler<br />
+            Mihailo Popović<br />
+            Peter Andorfer<br />
+            Petra Heinicker<br />
+            Veronika Gründhammer<br />
+        </p>
+    </div>
 {% endblock %}
