--- a/openatlas/templates/layout.html
+++ b/openatlas/templates/layout.html
@@ -6,7 +6,9 @@
         <link rel="apple-touch-icon" sizes="180x180" href="/static/apple-touch-icon.png" />
         <link rel="icon" type="image/png" href="/static/favicon-32x32.png" sizes="32x32" />
         <link rel="icon" type="image/png" href="/static/favicon-16x16.png" sizes="16x16" />
-        <link rel="manifest" href="/static/manifest.json" />
+        {% if '127.0.0' not in request.url %}
+            <link rel="manifest" href="/static/manifest.json" />
+        {% endif%}
         <link rel="mask-icon" href="/static/safari-pinned-tab.svg" />
         <link rel="stylesheet" href="/static/css/reset.css?v={{ config['VERSION'] }}" />
         <link rel="stylesheet" href="/static/vendor/jquery/jquery-ui-1.12.1/jquery-ui.min.css" />
