--- a/openatlas/templates/map.html
+++ b/openatlas/templates/map.html
@@ -18,6 +18,7 @@
     translate['edit'] = '{{ _('edit')|uc_first|safe }}';
     translate['delete'] = '{{ _('delete')|uc_first|safe }}';
     translate['details'] = '{{ _('details')|uc_first|safe }}';
+    translate['import'] = '{{ _('import')|uc_first|safe }}';
     translate['map_clear'] = '{{ _('map_clear')|uc_first|safe }}';
     translate['map_info_reedit'] = '{{ _('map_info_reedit')|uc_first|safe }}';
     translate['map_info_shape'] = '{{ _('map_info_shape')|uc_first|safe }}';
@@ -46,6 +47,7 @@
 <link rel="stylesheet" href="/static/vendor/leaflet-1.3.4/zoomdisplay/leaflet.zoomdisplay.css" />
 <link rel="stylesheet" href="/static/css/map.css" />
 
+
 <script src="/static/vendor/leaflet-1.3.4/leaflet.js"></script>
 <script src="/static/vendor/fontawesome-5.8.1/js/all.min.js"></script>
 <script src="/static/vendor/leaflet-1.3.4/zoomdisplay/leaflet.zoomdisplay.js"></script>
@@ -53,3 +55,4 @@
 <script src="/static/vendor/leaflet-1.3.4/Geonames-0.4.7/L.Control.Geonames.min.js"></script>
 <script src="/static/vendor/leaflet-1.3.4/markercluster-1.4.1/leaflet.markercluster.js"></script>
 <script src="/static/vendor/leaflet-1.3.4/usermarker-1.0/leaflet.usermarker.js"></script>
+
