gis consolidation in backend

--- a/openatlas/templates/map.html
+++ b/openatlas/templates/map.html
@@ -8,6 +8,7 @@
     var gisPolygonAll = {{ gis_data['gisPolygonAll']|safe }};
     var gisPolygonSelected = {{ gis_data['gisPolygonSelected']|safe }};
     var gisPolygonPointSelected = {{ gis_data['gisPolygonPointSelected']|safe }};
+    var gisAllSelected = {{ gis_data['gisAllSelected']|safe }};
     var jsonSearch = [];
     var translate = [];
     var map_update_mode = false;  // enables e.g. edit buttons in popup ups if true
