Update credits and minor adaptions

--- a/openatlas/templates/index/index.html
+++ b/openatlas/templates/index/index.html
@@ -43,7 +43,7 @@
         <div>{{ intro|safe }}</div>
         <div>
             {{ _('text_intro',
-                link_openatlas='<a target="_blank" rel="noopener" href="http://openatlas.eu/">OpenAtlas</a>'|safe,
+                link_openatlas='<a target="_blank" rel="noopener" href="https://openatlas.eu/">OpenAtlas</a>'|safe,
                 link_github='<a target="_blank" rel="noopener" href="https://github.com/craws/OpenAtlas">GitHub</a>'|safe,
                 link_cidoc='<a target="_blank" rel="noopener" href="http://www.cidoc-crm.org/">CIDOC CRM</a>'|safe,
                 link_wiki='<a target="_blank" rel="noopener" href="https://redmine.openatlas.eu/projects/uni/wiki">Wiki</a>'|safe,
