New Eastern Alps Revistied logo

--- a/openatlas/templates/index/credits.html
+++ b/openatlas/templates/index/credits.html
@@ -48,7 +48,7 @@
     </a>
     <a target="_blank" rel="noopener"
        href="https://www.oeaw.ac.at/imafo/forschung/historische-identitaetsforschung/projekte/weitere-projekte/ostalpenraum-revisited/">
-        <img src="/static/images/projects/ostalpen.jpg" alt="Ostalpenraum Revisited"/>
+        <img src="/static/images/projects/ostalpen.png" alt="Ostalpenraum Revisited"/>
     </a>
 </div>
 <h1>Team</h1>
