--- a/openatlas/templates/types/view.html
+++ b/openatlas/templates/types/view.html
@@ -20,7 +20,7 @@
         {% endif %}
     </ul>
     <div id="tab-info">
-        {% if 'editor'|is_authorized and node.root %}
+        {% if 'editor'|is_authorized and node.root and not root.locked %}
             <div class="button-bar">
                 <a href="{{ url_for('node_update', id_=node.id) }}">{{ _('edit')|uc_first }}</a>
                 {% if not node.system and node.count < 1 and not node.subs %}
