--- a/openatlas/templates/profile/index.html
+++ b/openatlas/templates/profile/index.html
@@ -11,16 +11,15 @@
         </div>
     {% endif %}
     <div style="float:left;">
-        <h1>{{ _('information')|uc_first }}</h1>
+        <h1>{{ _('general')|uc_first }}</h1>
         {{ data['info']|data_table|safe }}
     </div>
-    <div style="float:left;margin-left:1em;">
+    <div style="float:left;margin-left:2em;">
         <h1>{{ _('display')|uc_first }}</h1>
-        {{ form|display_form|safe }}
+        {{ data['display']|data_table|safe }}
     </div>
-    <script>
-        $('form').change(function (e) {
-            e.target.closest('form').submit();
-        });
-    </script>
+    <div style="float:left;margin-left:2em;">
+        <h1>{{ _('map')|uc_first }}</h1>
+        {{ data['map']|data_table|safe }}
+    </div>
 {% endblock %}
