--- a/openatlas/templates/map.html
+++ b/openatlas/templates/map.html
@@ -30,11 +30,13 @@
     translate['map_info_description'] = '{{ _('map_info_description')|safe }}';
     translate['map_geonames_title'] = '{{ _('Search by location name or postcode')|safe }}';
     translate['map_geonames_placeholder'] = '{{ _('Enter a location name')|safe }}';
+    //TODO: add translations for features table + Tabs
 
     overlayHack = false;
     {% if session['settings']['overlay_hack'] %}
         overlayHack = true;
     {% endif %}
+    console.log("tab load", gisAllSelected, gisPointSelected, gisPolygonSelected, gisLineSelected);
 
 </script>
 
