--- a/openatlas/templates/map.html
+++ b/openatlas/templates/map.html
@@ -30,14 +30,16 @@
     translate['map_info_description'] = '{{ _('map_info_description')|safe }}';
     translate['map_geonames_title'] = '{{ _('Search by location name or postcode')|safe }}';
     translate['map_geonames_placeholder'] = '{{ _('Enter a location name')|safe }}';
-    //TODO: add translations for features table + Tabs
+    translate['map_tabs_properties'] = '{{ _('Place Properties')|safe }}';
+    translate['map_tabs_features'] = '{{ _('Place Features')|safe }}';
+    translate['map_table_type'] = '{{ _('Type')|safe }}';
+    translate['map_table_name'] = '{{ _('Name')|safe }}';
+    translate['map_table_description'] = '{{ _('Description')|safe }}';
 
     overlayHack = false;
     {% if session['settings']['overlay_hack'] %}
         overlayHack = true;
     {% endif %}
-    console.log("tab load", gisAllSelected, gisPointSelected, gisPolygonSelected, gisLineSelected);
-
 </script>
 
 <link rel="stylesheet" href="/static/vendor/leaflet-1.3.4/leaflet.css" />
