Added Sandra to contributers

--- a/openatlas/templates/index/credits.html
+++ b/openatlas/templates/index/credits.html
@@ -88,6 +88,7 @@
     Mihailo Popović<br/>
     Peter Andorfer<br/>
     Petra Heinicker<br/>
+    Sandra Lehecka<br/>
     Veronika Gründhammer<br/>
 </p>
 {% endblock %}
