--- a/openatlas/templates/admin/check_dates.html
+++ b/openatlas/templates/admin/check_dates.html
@@ -7,9 +7,9 @@
 {{ 'Data_integrity'|manual_link|safe }}
 <div id="tabs" class="tabs-container">
     <ul>
-        <li><a href="#tab-dates">{{ _('invalid dates')|uc_first }} ({{ tables['dates'].rows|length|format_number }})</a></li>
-        <li><a href="#tab-link-dates">{{ _('invalid link dates')|uc_first }} ({{ tables['link_dates'].rows|length|format_number }})</a></li>
-        <li><a href="#tab-involvement-dates">{{ _('invalid involvement dates')|uc_first }} ({{ tables['involvement_dates'].rows|length|format_number }})</a></li>
+        <li><a href="#tab-dates">{{ _('invalid dates')|uc_first }} {{ tables['dates']|format_tab_number|safe }}</a></li>
+        <li><a href="#tab-link-dates">{{ _('invalid link dates')|uc_first }} {{ tables['link_dates']|format_tab_number|safe }}</a></li>
+        <li><a href="#tab-involvement-dates">{{ _('invalid involvement dates')|uc_first }} {{ tables['involvement_dates']|format_tab_number|safe }}</a></li>
     </ul>
     <div id="tab-dates">
     {% if tables['dates'].rows %}
