--- a/openatlas/templates/place/view.html
+++ b/openatlas/templates/place/view.html
@@ -14,21 +14,21 @@
         {% if gis_data %}
             <li><a href="#tab-map" id="map-tab-id">{{ _('map')|uc_first }}</a></li>
         {% endif %}
-        <li><a href="#tab-source">{{ _('source')|uc_first }} ({{ tables['source'].rows|length|format_number }})</a></li>
+        <li><a href="#tab-source">{{ _('source')|uc_first }} {{ tables['source']|format_tab_number|safe }}</a></li>
         {% if tables['event'].rows %}
-            <li><a href="#tab-event">{{ _('event')|uc_first }} ({{ tables['event'].rows|length|format_number }})</a></li>
+            <li><a href="#tab-event">{{ _('event')|uc_first }} {{ tables['event']|format_tab_number|safe }}</a></li>
         {% endif %}
         {% if tables['actor'].rows %}
-            <li><a href="#tab-actor">{{ _('actor')|uc_first }} ({{ tables['actor'].rows|length|format_number }})</a></li>
+            <li><a href="#tab-actor">{{ _('actor')|uc_first }} {{ tables['actor']|format_tab_number|safe }}</a></li>
         {% endif %}
-        <li><a href="#tab-reference">{{ _('reference')|uc_first }} ({{ tables['reference'].rows|length|format_number }})</a></li>
-        <li><a href="#tab-file">{{ _('files')|uc_first }}  ({{ tables['file'].rows|length|format_number }})</a></li>
+        <li><a href="#tab-reference">{{ _('reference')|uc_first }} {{ tables['reference']|format_tab_number|safe }}</a></li>
+        <li><a href="#tab-file">{{ _('files')|uc_first }} {{ tables['file']|format_tab_number|safe }}</a></li>
         {% if object_.system_type == 'place' %}
-            <li><a href="#tab-feature">{{ _('feature')|uc_first }}  ({{ tables['feature'].rows|length|format_number }})</a></li>
+            <li><a href="#tab-feature">{{ _('feature')|uc_first }} {{ tables['feature']|format_tab_number|safe }}</a></li>
         {% elif object_.system_type == 'feature' %}
-            <li><a href="#tab-stratigraphic-unit">{{ _('stratigraphic unit')|uc_first }}  ({{ tables['stratigraphic-unit'].rows|length }})</a></li>
+            <li><a href="#tab-stratigraphic-unit">{{ _('stratigraphic unit')|uc_first }} {{ tables['stratigraphic-unit']|format_tab_number|safe }}</a></li>
         {% elif object_.system_type == 'stratigraphic unit' %}
-            <li><a href="#tab-find">{{ _('find')|uc_first }}  ({{ tables['find'].rows|length|format_number }})</a></li>
+            <li><a href="#tab-find">{{ _('find')|uc_first }} {{ tables['find']|format_tab_number|safe }}</a></li>
         {% endif %}
     </ul>
     <div id="tab-info">
