--- a/openatlas/templates/reference/view.html
+++ b/openatlas/templates/reference/view.html
@@ -8,18 +8,18 @@
 <div id="tabs" class="tabs-container">
     <ul>
         <li><a href="#tab-info">{{ _('info')|uc_first }}</a></li>
-        <li><a href="#tab-source">{{ _('source')|uc_first }} ({{ tables['source'].rows|length|format_number }})</a></li>
+        <li><a href="#tab-source">{{ _('source')|uc_first }} {{ tables['source']|format_tab_number|safe }}</a></li>
         {% if reference.system_type != 'information carrier' %}
-            <li><a href="#tab-event">{{ _('event')|uc_first }} ({{ tables['event'].rows|length|format_number }})</a></li>
-            <li><a href="#tab-actor">{{ _('actor')|uc_first }} ({{ tables['actor'].rows|length|format_number }})</a></li>
-            <li><a href="#tab-place">{{ _('place')|uc_first }} ({{ tables['place'].rows|length|format_number }})</a></li>
+            <li><a href="#tab-event">{{ _('event')|uc_first }} {{ tables['event']|format_tab_number|safe }}</a></li>
+            <li><a href="#tab-actor">{{ _('actor')|uc_first }} {{ tables['actor']|format_tab_number|safe }}</a></li>
+            <li><a href="#tab-place">{{ _('place')|uc_first }} {{ tables['place']|format_tab_number|safe }}</a></li>
             {% for table_name in ['feature', 'stratigraphic-unit', 'find'] %}
                 {% if tables[table_name].rows %}
-                    <li><a href="#tab-{{ table_name }}">{{ _(table_name)|uc_first }} ({{ tables[table_name].rows|length|format_number }})</a></li>
+                    <li><a href="#tab-{{ table_name }}">{{ _(table_name)|uc_first }} {{ tables[table_name]|format_tab_number|safe }}</a></li>
                 {% endif %}
             {% endfor %}
         {% endif %}
-        <li><a href="#tab-file">{{ _('files')|uc_first }}  ({{ tables['file'].rows|length|format_number }})</a></li>
+        <li><a href="#tab-file">{{ _('files')|uc_first }} {{ tables['file']|format_tab_number|safe }}</a></li>
     </ul>
     <div id="tab-info">
         <div class="button-bar">
