Using map max zoom level from user settings

--- a/openatlas/templates/map.html
+++ b/openatlas/templates/map.html
@@ -11,6 +11,7 @@
     var gisAllSelected = {{ gis_data['gisAllSelected']|safe }};
     var jsonSearch = [];
     var translate = [];
+    var mapMaxZoom = {{ current_user.settings['max_zoom'] if current_user.settings['max_zoom'] else config['MAX_ZOOM'] }}
     var map_update_mode = false;  // enables e.g. edit buttons in popup ups if true
     var useCluster = {{ 'true' if session['settings']['map_cluster_enabled'] else 'false' }};
     var maxClusterRadius = {{ session['settings']['map_cluster_max_radius'] }};
