--- a/openatlas/templates/layout.html
+++ b/openatlas/templates/layout.html
@@ -13,15 +13,9 @@
         <link rel="stylesheet" href="/static/css/reset.css?v={{ config['VERSION'] }}" />
         <link rel="stylesheet" href="/static/vendor/jquery/jquery-ui-1.12.1/jquery-ui.min.css" />
         <link rel="stylesheet" href="/static/vendor/jquery/jstree-3.3.7/themes/default/style.min.css" />
-        {% for css_file in ['style.css', 'color.css', 'images.css'] %}
-            <link rel="stylesheet" href="/static/css/{{ css_file }}?v={{ config['VERSION'] }}" />
-            {% if current_user.is_authenticated %}
-                {% set css_file_path = '/static/themes/' + current_user.settings['theme'] + '/css/' + css_file %}
-                {% if css_file_path|test_file %}
-                    <link rel="stylesheet" href="{{ css_file_path }}?v={{ config['VERSION'] }}" />
-                {% endif %}
-            {% endif %}
-        {% endfor %}
+        <link rel="stylesheet" href="/static/css/style.css?v={{ config['VERSION'] }}" />
+        <link rel="stylesheet" href="/static/css/color.css?v={{ config['VERSION'] }}" />
+        <link rel="stylesheet" href="/static/css/images.css?v={{ config['VERSION'] }}" />
         <script src="/static/vendor/jquery/jquery-3.3.1.min.js"></script>
         <script src="/static/vendor/jquery/jquery-ui-1.12.1/jquery-ui.min.js"></script>
         <script src="/static/vendor/jquery/tablesorter-2.31.0/js/jquery.tablesorter.min.js"></script>
